# python-cli-submodule

./: .gitignore  README.md  out.txt  pyproject.toml
some_module/: __init__.py  __main__.py  default_config.py  some_module.py
some_module/cli/: __init__.py  config.py  logging.py  main.py
